.provarCaches/00D410000011HE0EAM/objects/rstk__csitem__c.object
<CustomObject>
    <description>csitem__c</description>
    <fields>
        <fullName>rstk__costsimind__c</fullName>
        <inlineHelpText>Simulated Cost Update option (Manual or Automatic)</inlineHelpText>
        <label>Simulated Cost Update Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calculated During Rollup</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__counter__c</fullName>
        <inlineHelpText>System generated counter for number of times updated</inlineHelpText>
        <label>Counter</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__csitem_invrev__c</fullName>
        <formula>rstk__peitem__r.rstk__peitem_invrev__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Revision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Inventory Division for this record</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>csitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__dscllc__c</fullName>
        <inlineHelpText>This is the Item&apos;s Low Level Code</inlineHelpText>
        <label>Low Level Code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__dterollup__c</fullName>
        <inlineHelpText>Date of Last Roll-up</inlineHelpText>
        <label>Rollup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__effectivedate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__enginvumcf__c</fullName>
        <inlineHelpText>This is the Item&apos;s Engineering to Inventory Unit of Measure conversion factor</inlineHelpText>
        <label>Eng-Inv Conv Factor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid or the externalid field itself is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>NULL</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__hascomponents__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates whether the Item has a Bill of Material</inlineHelpText>
        <label>BOM Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__intrdivstdcost__c</fullName>
        <inlineHelpText>This is the Standard cost for Inter-division transfers.</inlineHelpText>
        <label>Inter-Div Std Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__invpurumcf__c</fullName>
        <inlineHelpText>This is the Inventory to Purchasing Unit of Measure conversion factor</inlineHelpText>
        <label>Inv-Pur Conv Factor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__itemno__c</fullName>
        <inlineHelpText>This is the Inventory Item Number</inlineHelpText>
        <label>Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__itemscrapfctr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Scrap Factor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__notes__c</fullName>
        <inlineHelpText>System notes related to cost update process</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__ohdfrngrate__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Overhead Fringe Rate</inlineHelpText>
        <label>Overhead Fringe Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ohdlabrate__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Overhead Labor Rate</inlineHelpText>
        <label>Overhead Labor Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ohdmachrate__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Overhead Machine Rate</inlineHelpText>
        <label>Overhead Machine Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ohdmtlrate__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Item&apos;s Overhead Material Rate.</inlineHelpText>
        <label>Overhead Material Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__peitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Engineering Item Number</inlineHelpText>
        <label>Engineering Item Number</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>Cost Rollup Calculations</relationshipLabel>
        <relationshipName>csitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__refroutitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the default Routing Item associated with this Item</inlineHelpText>
        <label>Reference Routing Item</label>
        <referenceTo>rstk__rtrouthdr__c</referenceTo>
        <relationshipLabel>Cost Rollup Calculations</relationshipLabel>
        <relationshipName>csitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__src__c</fullName>
        <inlineHelpText>Source:  Inter-Division, Manufactured, Purchased, or Subcontract</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inter-Division</fullName>
                </value>
                <value>
                    <fullName>Manufactured</fullName>
                </value>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Subcontract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__stdcostordqty__c</fullName>
        <inlineHelpText>Standard Order Quantity</inlineHelpText>
        <label>Standard Order Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stdfrghtcost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Standard Freight Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stdlabcost__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Item&apos;s Standard Labor Cost</inlineHelpText>
        <label>Standard Labor Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stdothlndcost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Standard Other Landed Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stdpurcost__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Standard Purchase Cost</inlineHelpText>
        <label>Standard Purchase Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stdpurlabcost__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Standard Purchase Labor Cost</inlineHelpText>
        <label>stdpurlabcost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stdpurohdcost__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Purchased Overhead Cost</inlineHelpText>
        <label>Standard Purchased Overhead Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstcumfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Cumulative Unit Cost for Freight</inlineHelpText>
        <label>Standard Cum Freight Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstcumlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Standard Unit Cost Cum Labor</inlineHelpText>
        <label>Standard Cum Labor Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstcummtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Standard Unit Cost Cum Material</inlineHelpText>
        <label>Standard Cum Material Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstcumohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Standard Cumulative Fringe OHD Unit Cost</description>
        <inlineHelpText>Standard Unit Cost Cum Overhead Fringe</inlineHelpText>
        <label>Standard Cum Fringe OHD Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstcumohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Standard Cumulative Labor OHD Unit Cost</description>
        <inlineHelpText>Standard Unit Cost Cum Overhead Labor</inlineHelpText>
        <label>Standard Cum Labor OHD Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstcumohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Standard Cumulative Machine OHD Unit Cost</description>
        <inlineHelpText>Standard Unit Cost Cum Overhead Machine</inlineHelpText>
        <label>Standard Cum Machine OHD Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstcumohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Standard Cumulative Material OHD Unit Cost</description>
        <inlineHelpText>Standard Unit Cost Cum Overhead Material</inlineHelpText>
        <label>Standard Cum Material OHD Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstcumothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Standard Cumulative Indirect Charges Unit Cost</description>
        <inlineHelpText>This is the Cumulative Unit Cost for Other Indirect Charges</inlineHelpText>
        <label>Standard Cum Other Landed Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstcumsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Standard Cumulative Subcontract Labor Unit Cost</description>
        <inlineHelpText>Standard Unit Cost Cum Subcontract Labor</inlineHelpText>
        <label>Standard Cum Subcontract Labor Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstcumsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Standard Cum Subcontract Material Unit Cost</description>
        <inlineHelpText>Standard Unit Cost Cum Subcontract Material</inlineHelpText>
        <label>Standard Cum Subcontract Mtl Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstslfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Standard Single Level Freight Unit Cost</description>
        <inlineHelpText>This is the Standard Unit Cost, Single level, for Freight</inlineHelpText>
        <label>Standard SL Freight Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstsllab__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Standard Single Level Labor Unit Cost</description>
        <inlineHelpText>Standard Unit Cost Single Level Labor</inlineHelpText>
        <label>Standard SL Labor Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstslmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Standard Unit Cost Single Level Material</inlineHelpText>
        <label>Standard SL Material Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstslohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Standard Single Level Fringe OHD Unit Cost</description>
        <inlineHelpText>Standard Unit Cost Single Level Overhead Fringe</inlineHelpText>
        <label>Standard SL Fringe OHD Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstslohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Standard Single Level Labor OHD Unit Cost</description>
        <inlineHelpText>Standard Unit Cost Single Level Overhead Labor</inlineHelpText>
        <label>Standard SL Labor OHD Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstslohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Standard Unit Cost Single Level Overhead Machine</inlineHelpText>
        <label>Standard SL Machine OHD Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstslohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Standard Unit Cost Single Level Overhead Material</inlineHelpText>
        <label>Standard SL Material OHD Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstslothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Cost, Single level, for Other Indirect Charges</inlineHelpText>
        <label>Standard SL Indirect Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstslsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Standard Unit Cost Single Level Subcontract Labor</inlineHelpText>
        <label>Standard SL Subcontract Labor Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__stducstslsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Standard Single Level S/C Material Unit Cost</description>
        <inlineHelpText>Standard Unit Cost Single Level Subcontract Material</inlineHelpText>
        <label>Standard SL Subcontract Mtl Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Cost Rollup Calculations</label>
    <listViews>
        <fullName>Rollup_Cost_Item_Ft_Collins</fullName>
        <columns>NAME</columns>
        <columns>rstk__itemno__c</columns>
        <columns>rstk__src__c</columns>
        <columns>rstk__stdpurcost__c</columns>
        <columns>rstk__stducstsllab__c</columns>
        <columns>rstk__stducstslmtl__c</columns>
        <columns>rstk__stducstslsubmtl__c</columns>
        <columns>rstk__stducstslohdlab__c</columns>
        <columns>rstk__stducstslohdmach__c</columns>
        <columns>rstk__stducstslohdmtl__c</columns>
        <columns>rstk__stducstslsublab__c</columns>
        <columns>rstk__stducstslohdfrng__c</columns>
        <columns>rstk__ohdfrngrate__c</columns>
        <columns>rstk__ohdlabrate__c</columns>
        <columns>rstk__ohdmtlrate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__div__c</field>
            <operation>contains</operation>
            <value>collins</value>
        </filters>
        <filters>
            <field>rstk__itemno__c</field>
            <operation>contains</operation>
            <value>2000</value>
        </filters>
        <label>Rollup Cost Item - Ft Collins</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rollup_Cost_Item_Ft_Collins_Select</fullName>
        <columns>NAME</columns>
        <columns>rstk__div__c</columns>
        <columns>rstk__itemno__c</columns>
        <columns>rstk__notes__c</columns>
        <columns>rstk__src__c</columns>
        <columns>rstk__stdpurcost__c</columns>
        <columns>rstk__stducstcummtl__c</columns>
        <columns>rstk__stducstslmtl__c</columns>
        <columns>rstk__stducstcumlab__c</columns>
        <columns>rstk__stducstsllab__c</columns>
        <columns>rstk__stducstcumsubmtl__c</columns>
        <columns>rstk__stducstslsubmtl__c</columns>
        <columns>rstk__effectivedate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__div__c</field>
            <operation>contains</operation>
            <value>collins</value>
        </filters>
        <filters>
            <field>rstk__itemno__c</field>
            <operation>contains</operation>
            <value>16sep</value>
        </filters>
        <label>Rollup Cost Item - Ft Collins - Select</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Rollup_Cost_Item</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstk__div__c</columns>
        <columns>rstk__itemno__c</columns>
        <columns>rstk__notes__c</columns>
        <columns>rstk__src__c</columns>
        <columns>rstk__stdpurcost__c</columns>
        <columns>rstk__stducstcummtl__c</columns>
        <columns>rstk__stducstslmtl__c</columns>
        <columns>rstk__stducstcumlab__c</columns>
        <columns>rstk__stducstsllab__c</columns>
        <columns>rstk__stducstcumsubmtl__c</columns>
        <columns>rstk__stducstslsubmtl__c</columns>
        <columns>rstk__effectivedate__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Rollup Cost Item</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Rollup Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>